hydroflow/tests/compile-fail/surface_negative_loop.stderr
error: Negative edge creates a negative cycle which must be broken with a `next_epoch()` operator.
 --> tests/compile-fail/surface_negative_loop.rs:7:18
  |
7 |         diff -> [neg]diff;
  |                  ^^^
